--- a/index.html
+++ b/index.html
@@ -78,10 +78,12 @@
           <div class="container">
             <div class="carousel-caption">
 			  <div class="caption-bkgd">
-                <h1>Example headline.</h1>
-                <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
+                <h1>Snake v1.0</h1>
+                <p>
+					To add
+				</p>
               </div>
-			  <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+			  <p><a class="btn btn-lg btn-primary" href="snake.html" role="button">View here</a></p>
             </div>
           </div>
         </div>
@@ -89,8 +91,8 @@
           <img src="images/carousel/2.jpg" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Another example headline.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <h1>To be added</h1>
+              <p>Notes</p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
             </div>
           </div>
@@ -99,8 +101,8 @@
           <img src="images/carousel/3.jpg" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>One more for good measure.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <h1>View projects</h1>
+              <p></p>
               <p><a class="btn btn-lg btn-primary" href="projects.html" role="button">Browse projects</a></p>
             </div>
           </div>
