--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 		  
 		  <!-- Logos -->
 		  <ul class="nav navbar-nav navbar-right social">
-			<li><a href="https://www.facebook.com/radu.jica">
+			<li><a href="https://www.facebook.com/radu.jica" target="_blank">
 			  <img class="logo" alt="Facebook" src="images/logos/fb.jpg">
 			</a></li>
-			<li><a href="https://www.linkedin.com/profile/view?id=302600141">
+			<li><a href="https://www.linkedin.com/profile/view?id=302600141" target="_blank">
 			  <img class="logo" alt="LinkedIn" src="images/logos/li.jpg">
 			</a></li>
-			<li><a href="https://twitter.com/radujica">
+			<li><a href="https://twitter.com/radujica" target="_blank">
 			  <img class="logo" alt="Twitter" src="images/logos/tw.jpg">
 			</a></li>
 		  </ul>
