--- a/index.html
+++ b/index.html
@@ -35,11 +35,12 @@
 			<li class="dropdown">
 			  <a href="projects.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Projects <span class="caret"></span></a>
 			  <ul class="dropdown-menu" role="menu">
+			    <li><a href="projects.html">Overview</a></li>
 			    <li><a href="ajax.html">AJAX Database</a></li>
 				<li><a href="#">Bank Account</a></li>
 				<li><a href="#">Clustering</a></li>
 				<li class="divider"></li>
-				<li><a href="#">Games</a></li>
+				<li><a href="snake.html">Snake</a></li>
 			  </ul>
 			</li>
 			<li><a href="#">Calendar</a></li>
@@ -79,11 +80,15 @@
             <div class="carousel-caption">
 			  <div class="caption-bkgd">
                 <h1>Snake v1.0</h1>
+				<p>
+					Written in Java.
+				</p>
                 <p>
-					To add
+					For now, only possible to download from 
+					<a href="https://drive.google.com/file/d/0B_V8amkx-ixtd0tTM243QzlxWWs/view?usp=sharing" target="_blank">Google Drive</a>.
 				</p>
               </div>
-			  <p><a class="btn btn-lg btn-primary" href="snake.html" role="button">View here</a></p>
+			  <p><a class="btn btn-lg btn-primary" href="snake.html" role="button">View more</a></p>
             </div>
           </div>
         </div>
