--- a/ajax.html
+++ b/ajax.html
@@ -39,7 +39,7 @@
 				<li><a href="#">Bank Account</a></li>
 				<li><a href="#">Clustering</a></li>
 				<li class="divider"></li>
-				<li><a href="#">Games</a></li>
+				<li><a href="#">Snake</a></li>
 			  </ul>
 			</li>
 			<li><a href="#">Calendar</a></li>
