--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
           <img src="images/carousel/2.jpg" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>To be added</h1>
+              <h1>PLAY GAME</h1>
               <p>Notes</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+              <p><a class="btn btn-lg btn-primary" href="spaceShooter.html" role="button">Learn more</a></p>
             </div>
           </div>
         </div>
