some changes, fixed images

--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
   <!-- Paste any valid HTML code here. The code will be inserted to the end of <head> section, right before </head> -->
 </head>
 <body>
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise mobile website generator</a></section>
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise website maker free</a></section>
 <section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--transparent mbr-navbar--sticky mbr-navbar--auto-collapse" id="menu-5">
     <div class="mbr-navbar__section mbr-section">
         <div class="mbr-section__container container">
@@ -56,16 +56,16 @@
         <div class="mbr-section__row row">
             <div class="mbr-section__col col-xs-12 col-sm-6">
                 <div class="mbr-section__container mbr-section__container--center mbr-section__container--middle">
-                    <figure class="mbr-figure"><img class="mbr-figure__img" src="assets/images/bootstrap.png"></figure>
+                    <figure class="mbr-figure"><img class="mbr-figure__img" src="assets/images/snake-596x395-35.png" alt="snake-game-image" title="SnakeGame"></figure>
                 </div>
                 <div class="mbr-section__container mbr-section__container--middle">
                     <div class="mbr-header mbr-header--reduce mbr-header--center mbr-header--wysiwyg">
-                        <h3 class="mbr-header__text">Snake</h3>
+                        <h3 class="mbr-header__text">SNAKE</h3>
                     </div>
                 </div>
                 <div class="mbr-section__container mbr-section__container--middle">
                     <div class="mbr-article mbr-article--wysiwyg">
-                        <p>- WORK IN PROGRESS -&nbsp;</p>
+                        <p>A basic Snake game in Java. At the moment, it is only available for download on your computer. Please check that you have the latest Java installed.</p>
                     </div>
                 </div>
                 <div class="mbr-section__container mbr-section__container--last">
@@ -74,11 +74,11 @@
             </div>
             <div class="mbr-section__col col-xs-12 col-sm-6">
                 <div class="mbr-section__container mbr-section__container--center mbr-section__container--middle">
-                    <figure class="mbr-figure"><img class="mbr-figure__img" src="assets/images/responsive.png"></figure>
+                    <figure class="mbr-figure"><img class="mbr-figure__img" src="assets/images/clustering2-2000x1338-11-2000x1338-41.png" alt="clustering-image" title="ClusteringExample"></figure>
                 </div>
                 <div class="mbr-section__container mbr-section__container--middle">
                     <div class="mbr-header mbr-header--reduce mbr-header--center mbr-header--wysiwyg">
-                        <h3 class="mbr-header__text">Clustering</h3>
+                        <h3 class="mbr-header__text">CLUSTERING</h3>
                     </div>
                 </div>
                 <div class="mbr-section__container mbr-section__container--middle">
