--- a/Clustering.html
+++ b/Clustering.html
@@ -20,7 +20,7 @@
   <!-- Paste any valid HTML code here. The code will be inserted to the end of <head> section, right before </head> -->
 </head>
 <body>
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise open source website builder</a></section>
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise free website builder software</a></section>
 <section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--transparent mbr-navbar--sticky mbr-navbar--auto-collapse" id="menu-29">
     <div class="mbr-navbar__section mbr-section">
         <div class="mbr-section__container container">
@@ -53,7 +53,7 @@
                         <h1 class="mbr-hero__text">CLUSTERING</h1>
                         <p class="mbr-hero__subtext">Clustering is a type of unsupervised learning applied when one wants to group data into certain categories. The app here (in Java) will take an input file and apply certain clustering algorithms and show you step-by-step what happens.</p>
                     </div>
-                    <div class="mbr-buttons btn-inverse mbr-buttons--left"><a class="mbr-buttons__btn btn btn-lg btn-danger animated fadeInUp delay" href="https://drive.google.com" target="_blank">DOWNLOAD</a> <a class="mbr-buttons__btn btn btn-lg btn-default animated fadeInUp delay" href="Clustering.html#content5-37">LEARN MORE</a></div>
+                    <div class="mbr-buttons btn-inverse mbr-buttons--left"><a class="mbr-buttons__btn btn btn-lg btn-danger animated fadeInUp delay" href="https://drive.google.com" target="_blank">DOWNLOAD</a>  <a class="mbr-buttons__btn btn btn-lg btn-default animated fadeInUp delay" href="Clustering.html#content5-37">LEARN MORE</a></div>
                 </div></div>
             </div></div>
         </div>
