--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
   <!-- Paste any valid HTML code here. The code will be inserted to the end of <head> section, right before </head> -->
 </head>
 <body>
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise easy website builder software</a></section>
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise html site builder</a></section>
 <section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--transparent mbr-navbar--sticky mbr-navbar--auto-collapse" id="menu-0">
     <div class="mbr-navbar__section mbr-section">
         <div class="mbr-section__container container">
             <div class="mbr-navbar__container">
                 <div class="mbr-navbar__column mbr-navbar__column--s mbr-navbar__brand">
                     <span class="mbr-navbar__brand-link mbr-brand mbr-brand--inline">
-                        <span class="mbr-brand__logo"><a href="index.html"><img class="mbr-navbar__brand-img mbr-brand__img" src="assets/images/asasa-300x300-74.png" title="radujica_logo"></a></span>
+                        <span class="mbr-brand__logo"><a href="index.html"><img class="mbr-navbar__brand-img mbr-brand__img" src="assets/images/asasa-300x300-74.png" alt="RJ-logo" title="RaduJicaLogo"></a></span>
                         <span class="mbr-brand__name"><a class="mbr-brand__name text-white" href="https://mobirise.com">Radu JICA</a></span>
                     </span>
                 </div>
@@ -51,9 +51,9 @@
                 <div class="row"><div class=" col-sm-8 col-sm-offset-2">
                     <div class="mbr-hero animated fadeInUp">
                         <h1 class="mbr-hero__text">Radu JICA</h1>
-                        <p class="mbr-hero__subtext">Welcome to my Personal Website.<br>Here I post my most recent projects.<br></p>
+                        <p class="mbr-hero__subtext">Welcome to my Personal Website!<br>Here I post my most recent projects.<br></p>
                     </div>
-                    <div class="mbr-buttons btn-inverse mbr-buttons--center"><a class="mbr-buttons__btn btn btn-lg btn-danger animated fadeInUp delay" href="index.html#msg-box4-3">Projects</a> <a class="mbr-buttons__btn btn btn-lg btn-default animated fadeInUp delay" href="contact.html">Contact</a></div>
+                    <div class="mbr-buttons btn-inverse mbr-buttons--center"><a class="mbr-buttons__btn btn btn-lg btn-danger animated fadeInUp delay" href="index.html#msg-box4-3">PROJECTS</a> <a class="mbr-buttons__btn btn btn-lg btn-default animated fadeInUp delay" href="contact.html">CONTACT</a></div>
                 </div></div>
             </div></div>
         </div>
@@ -71,7 +71,7 @@
         <div class="row">
             <div class="mbr-box mbr-box--fixed mbr-box--adapted">
                 <div class="mbr-box__magnet mbr-box__magnet--top-right mbr-section__left col-sm-6">
-                    <figure class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width"><img class="mbr-figure__img" src="assets/images/iphone.png"></figure>
+                    <figure class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width"><img class="mbr-figure__img" src="assets/images/snake-596x395-58.png" alt="snake-game-image" title="SnakeGame"></figure>
                 </div>
                 <div class="mbr-box__magnet mbr-class-mbr-box__magnet--center-left col-sm-6 mbr-section__right">
                     <div class="mbr-section__container mbr-section__container--middle">
@@ -110,11 +110,11 @@
                         <div class="mbr-article mbr-article--auto-align mbr-article--wysiwyg">A Clustering app in Java that will apply basic algorithms to group data from an input file.&nbsp;</div>
                     </div>
                     <div class="mbr-section__container">
-                        <div class="mbr-buttons mbr-buttons--auto-align btn-inverse"><a class="mbr-buttons__btn btn btn-lg btn-default" href="Project2_clustering.html">LEARN MORE</a></div>
+                        <div class="mbr-buttons mbr-buttons--auto-align btn-inverse"><a class="mbr-buttons__btn btn btn-lg btn-default" href="Clustering.html">LEARN MORE</a></div>
                     </div>
                 </div>
                 <div class="mbr-box__magnet mbr-box__magnet--top-left mbr-section__right col-sm-6">
-                    <figure class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width"><img class="mbr-figure__img" src="assets/images/iphone.png"></figure>
+                    <figure class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width"><img class="mbr-figure__img" src="assets/images/clustering2-2000x1338-11-2000x1338-37.png" alt="clustering-image" title="ClusteringExample"></figure>
                 </div>
             </div>
         </div>
